[gd_scene load_steps=2 format=3 uid="uid://b85ykfrvhrsk2"]

[ext_resource type="Script" uid="uid://bijy48evcbfp4" path="res://scripts/Bancada.gd" id="1_wsuxy"]

[node name="Bancada" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_wsuxy")

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 20.0
offset_right = 150.0
offset_bottom = 70.0
text = "Voltar"

[node name="PieceListLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 100.0
offset_right = 250.0
offset_bottom = 130.0
text = "Suas Peças:"

[node name="PieceScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 50.0
offset_top = 140.0
offset_right = 370.0
offset_bottom = 540.0

[node name="PieceDetailsLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 400.0
offset_top = 150.0
offset_right = 900.0
offset_bottom = 350.0
text = "Selecione uma peça para ver detalhes"

[node name="EquipButton" type="Button" parent="."]
layout_mode = 0
offset_left = 400.0
offset_top = 450.0
offset_right = 600.0
offset_bottom = 500.0
text = "Equipar um robô"
